objects/Quote/fields/ELV_Day_1_ARR_Unadjusted_Rollup__c.field-meta.xml
<CustomField>
    <fullName>ELV_Day_1_ARR_Unadjusted_Rollup__c</fullName>
    <description>TNCI-139 / ELV-CPQ-036. Native roll-up: SUM QuoteLineItem.ELV_Day_1_ARR__c where ELV_Exclude_from_ARR__c = false. CPQ-faithful replacement for the writable placeholder.</description>
    <inlineHelpText>Sum of non-excluded Quote Line Day 1 ARR.</inlineHelpText>
    <label>Sales ARR Unadjusted (Rollup)</label>
    <summarizedField>QuoteLineItem.ELV_Day_1_ARR__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ELV_Exclude_from_ARR__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>