objects/Quote/fields/ELV_Deal_Desk_Approver__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deal_Desk_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Desk Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Deal Desk Approver)</relationshipLabel>
    <relationshipName>ELV_Deal_Desk_Approver_Q</relationshipName>
    <type>Lookup</type>
</CustomField>