objects/Quote/fields/ELV_Deal_Desk_Approver_Lead_LKUP__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deal_Desk_Approver_Lead_LKUP__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deal Desk Approver Lead</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Quotes (Deal Desk Approver Lead)</relationshipLabel>
    <relationshipName>ELV_Deal_Desk_Approver_Lead_LKUPQ</relationshipName>
    <type>Lookup</type>
</CustomField>