objects/Quote/fields/ELV_Deployment_Exception_Granted__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Exception_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Deployment Exception Granted</label>
    <type>Checkbox</type>
</CustomField>