objects/Quote/fields/ELV_Deployment_Method__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Method__c</fullName>
    <label>Deployment Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OnPrem</fullName>
            </value>
            <value>
                <fullName>Hybrid</fullName>
            </value>
            <value>
                <fullName>Cloud</fullName>
            </value>
            <value>
                <fullName>Tanium Cloud for US Government</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>