objects/Quote/fields/ELV_Deployment_Method_Aggregate__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Method_Aggregate__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Aggregate deployment-method indicator computed by the pricing trigger from quote lines.</description>
    <label>Deployment Method Aggregate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>