objects/Quote/fields/ELV_Deployment_Partner__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deployment Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Deployment Provider)</relationshipLabel>
    <relationshipName>ELV_Deployment_Partner_Q</relationshipName>
    <type>Lookup</type>
</CustomField>