objects/Quote/fields/ELV_Deployment_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Partner_Name__c</fullName>
    <description>Used in Approvals Pro variable(s)</description>
    <formula>ELV_Deployment_Partner__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deployment Partner Name</label>
    <type>Text</type>
</CustomField>