objects/Quote/fields/ELV_Deployment_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_Deployment_Type__c</fullName>
    <label>Deployment Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ELV_Deployment_Type_Hybrid</valueSetName>
    </valueSet>
</CustomField>