objects/Quote/fields/ELV_Discount_Guidance__c.field-meta.xml
<CustomField>
    <fullName>ELV_Discount_Guidance__c</fullName>
    <formula>HYPERLINK(&quot;https://tanium.sharepoint.com/sites/GTMHub-Deal%20Desk/SitePages/Discount-Guidance.aspx&quot;, &quot;Click here for Discount Guidance&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Guidance</label>
    <type>Text</type>
</CustomField>