objects/Quote/fields/ELV_Discover_Check__c.field-meta.xml
<CustomField>
    <fullName>ELV_Discover_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Discover Check</label>
    <type>Checkbox</type>
</CustomField>