objects/Quote/fields/ELV_Display_Promo_Column_PDF__c.field-meta.xml
<CustomField>
    <fullName>ELV_Display_Promo_Column_PDF__c</fullName>
    <formula>IF(OR(ELV_Promotion_Exist__c &gt; 0,ELV_Bursting_Count__c &gt; 0,ELV_BurstingCount__c &gt; 0,ELV_FOC_Count__c &gt; 0,ELV_Includes_Trial_Product_Count__c &gt; 0),True,False)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Display Promo Column PDF</label>
    <type>Checkbox</type>
</CustomField>