objects/Quote/fields/ELV_Disti_Renewal_Discount_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Disti_Renewal_Discount_Percent__c</fullName>
    <label>Disti Renewal Discount Percent</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>