objects/Quote/fields/ELV_DistiDiscountPercentMarketplace__c.field-meta.xml
<CustomField>
    <fullName>ELV_DistiDiscountPercentMarketplace__c</fullName>
    <label>Disti Discount Percent - Marketplace</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>