objects/Quote/fields/ELV_Distributor__c.field-meta.xml
<CustomField>
    <fullName>ELV_Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Distributor)</relationshipLabel>
    <relationshipName>ELV_DistributorQ</relationshipName>
    <type>Lookup</type>
</CustomField>