objects/Quote/fields/ELV_DistributorDiscount__c.field-meta.xml
<CustomField>
    <fullName>ELV_DistributorDiscount__c</fullName>
    <label>Distributor Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>