objects/Quote/fields/ELV_Do_Not_Show_Dates__c.field-meta.xml
<CustomField>
    <fullName>ELV_Do_Not_Show_Dates__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Lock in Dates &amp; Display on Quote</label>
    <type>Checkbox</type>
</CustomField>