objects/Quote/fields/ELV_Dont_Run_Product_Rule__c.field-meta.xml
<CustomField>
    <fullName>ELV_Dont_Run_Product_Rule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Don’t Run Product Rule</label>
    <type>Checkbox</type>
</CustomField>