objects/Quote/fields/ELV_Downstream_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Downstream_Partner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Downstream Partner Override</label>
    <type>Checkbox</type>
</CustomField>