objects/Quote/fields/ELV_Downstream_Reseller__c.field-meta.xml
<CustomField>
    <fullName>ELV_Downstream_Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Downstream Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (Downstream Partner)</relationshipLabel>
    <relationshipName>ELV_Downstream_Reseller_Q</relationshipName>
    <type>Lookup</type>
</CustomField>