objects/Quote/fields/ELV_Eligible_for_Distributor_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Eligible_for_Distributor_Discount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Eligible for Distributor Discount</label>
    <type>Checkbox</type>
</CustomField>