objects/Quote/fields/ELV_EmergingEnterpriseProducts__c.field-meta.xml
<CustomField>
    <fullName>ELV_EmergingEnterpriseProducts__c</fullName>
    <label>Emerging Enterprise Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>