objects/Quote/fields/ELV_EmergingEnterprisePromoProducts__c.field-meta.xml
<CustomField>
    <fullName>ELV_EmergingEnterprisePromoProducts__c</fullName>
    <label>Emerging Enterprise Promo Products</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>