objects/Quote/fields/ELV_End_User_Account__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_User_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>End User Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (End User Account)</relationshipLabel>
    <relationshipName>ELV_End_User_Account_Q</relationshipName>
    <type>Lookup</type>
</CustomField>