objects/Quote/fields/ELV_End_User_Account_Display__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_User_Account_Display__c</fullName>
    <formula>ELV_End_User_Account__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Account Display</label>
    <type>Text</type>
</CustomField>