objects/Quote/fields/ELV_End_User_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_User_Account_Type__c</fullName>
    <formula>TEXT(ELV_End_User_Account__r.Type)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Account Type</label>
    <type>Text</type>
</CustomField>