objects/Quote/fields/ELV_End_User_List_total_without_Promo__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_User_List_total_without_Promo__c</fullName>
    <formula>ELV_List_total_without_Promo__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User List total without Promo</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>