objects/Quote/fields/ELV_End_User_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_End_User_Product_Discount__c</fullName>
    <formula>if( ELV_List_total_without_Promo__c = 0 , 0, ELV_Product_Discount_no_Promo__c / ELV_List_total_without_Promo__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>End User Product Discount %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>