objects/Quote/fields/ELV_ESO_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESO_Product_Count__c</fullName>
    <label>ESO Product Count</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>