objects/Quote/fields/ELV_ESO_Regional_Director__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESO_Regional_Director__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ESO Regional Director</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Quotes1</relationshipName>
    <type>Lookup</type>
</CustomField>