objects/Quote/fields/ELV_ESR_Product_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_ESR_Product_Discount__c</fullName>
    <label>ESR Product Discount</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>