objects/Quote/fields/ELV_Exclude_Auto_Renewal_Language__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_Auto_Renewal_Language__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Auto-Renewal Language</label>
    <type>Checkbox</type>
</CustomField>