objects/Quote/fields/ELV_Exclude_Partner_Transition_ISR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_Partner_Transition_ISR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Partner Transition ISR</label>
    <type>Checkbox</type>
</CustomField>