objects/Quote/fields/ELV_Exclude_Uplift__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exclude_Uplift__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude Uplift (All Lines)</label>
    <type>Checkbox</type>
</CustomField>