objects/Quote/fields/ELV_Exit_ARR__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exit_ARR__c</fullName>
    <description>TNCI-139 / ELV-CPQ-036. Port of the CPQ Quote before-save flow formula_ExitPlusAdjustment: Exit ARR Unadjusted (Rollup) plus the manual Exit ARR Adjustment, less the marketplace impact taken as a percent of the unadjusted roll-up. CORRECTED 2026-08-20: the /100 divisor carried over from the flow was removed. A flow formula reads a Percent field as its displayed number, so the CPQ flow must divide by 100; a formula field reads the same value as a fraction, so dividing again understates the marketplace term by 100x. The Apex Sales ARR stamp keeps its divisor because Apex, like the flow, reads the raw number.</description>
    <formula>IF( ISBLANK( ELV_Exit_ARR_Unadjusted_Rollup__c ), 0, ( ELV_Exit_ARR_Unadjusted_Rollup__c + ELV_Exit_ARR_Adjustment__c ) - ( ELV_Exit_ARR_Unadjusted_Rollup__c * ELV_Marketplace_ARR_Impact_Percent__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Exit ARR = Exit ARR Unadjusted (Rollup) + Exit ARR Adjustment - Marketplace Exit ARR Impact.</inlineHelpText>
    <label>Exit ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>