objects/Quote/fields/ELV_Exit_ARR_End_Date__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exit_ARR_End_Date__c</fullName>
    <description>TNCI 139 / ELV-CPQ-036. Converted from a writable Date to a Roll-Up Summary. Nue port of CPQ SBQQ__Quote__c.Exit_ARR_End_Date__c, which is MAX of the quote line end-date EDW mirror filtered on Exclude_ARR_Formula__c = true (misleading name; TRUE means include). Nue equivalent: MAX of Ruby__SubscriptionEndDate__c filtered on ELV_Include_in_ARR_Calc__c = true. Display field only - no formula, roll-up or Apex consumes it in either org, so the conversion changes no ARR value.</description>
    <inlineHelpText>The latest end date of the ARR-eligible quote lines on this quote.</inlineHelpText>
    <label>Exit ARR End Date</label>
    <summarizedField>QuoteLineItem.Ruby__SubscriptionEndDate__c</summarizedField>
    <summaryFilterItems>
        <field>QuoteLineItem.ELV_Include_in_ARR_Calc__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>QuoteLineItem.QuoteId</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>