objects/Quote/fields/ELV_Exit_ARR_Unadjusted__c.field-meta.xml
<CustomField>
    <fullName>ELV_Exit_ARR_Unadjusted__c</fullName>
    <label>DEPRECATED - ExtARR Unadjst (Price Rule)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>