objects/Quote/fields/ELV_Expiration_Date_Limit__c.field-meta.xml
<CustomField>
    <fullName>ELV_Expiration_Date_Limit__c</fullName>
    <label>Expiration Date Limit</label>
    <type>Date</type>
</CustomField>