objects/Quote/fields/ELV_Expiration_Date_Locked__c.field-meta.xml
<CustomField>
    <fullName>ELV_Expiration_Date_Locked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Locks the calculated expiration-date limit after a manual override; Deal Desk may manage this control.</description>
    <label>Expiration Date Locked</label>
    <type>Checkbox</type>
</CustomField>