objects/Quote/fields/ELV_External_Quote__c.field-meta.xml
<CustomField>
    <fullName>ELV_External_Quote__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>TNCI-69: Populated manually on primary quote - allows user to associate the external quote.</description>
    <label>External Quote</label>
    <referenceTo>Quote</referenceTo>
    <relationshipLabel>External Quotes</relationshipLabel>
    <relationshipName>External_Quotes</relationshipName>
    <type>Lookup</type>
</CustomField>