objects/Quote/fields/ELV_FastTrack__c.field-meta.xml
<CustomField>
    <fullName>ELV_FastTrack__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fast Track</label>
    <type>Checkbox</type>
</CustomField>