objects/Quote/fields/ELV_Final_Term_on_Free_Products__c.field-meta.xml
<CustomField>
    <fullName>ELV_Final_Term_on_Free_Products__c</fullName>
    <formula>Ruby__SubscriptionTerm__c - ELV_Free_Products_Term__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Final Term on Free Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>