objects/Quote/fields/ELV_First_Billing_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_First_Billing_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Billing Override</label>
    <type>Checkbox</type>
</CustomField>