objects/Quote/fields/ELV_Fixed_Discount__c.field-meta.xml
<CustomField>
    <fullName>ELV_Fixed_Discount__c</fullName>
    <inlineHelpText>Customer may purchase additional quantities at ___% discount off MSRP.</inlineHelpText>
    <label>Additional Qty Pricing Discount %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>