objects/Quote/fields/ELV_Fixed_Pricing__c.field-meta.xml
<CustomField>
    <fullName>ELV_Fixed_Pricing__c</fullName>
    <inlineHelpText>Max percent increase upon next renewal. Annualized Unit Sales Price for the Products may be increased by no more than ___%, year-over-year, provided that Customer’s purchase is in the same or greater quantities</inlineHelpText>
    <label>Next Renewal Price Cap %</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>