objects/Quote/fields/ELV_Flag_Color__c.field-meta.xml
<CustomField>
    <fullName>ELV_Flag_Color__c</fullName>
    <label>Flag Color</label>
    <length>150</length>
    <type>Text</type>
</CustomField>