objects/Quote/fields/ELV_Footprint_Score__c.field-meta.xml
<CustomField>
    <fullName>ELV_Footprint_Score__c</fullName>
    <formula>IF( Opportunity.Account.Tanium_Derived_EP_WF__c =0,0,IF( ELV_No_of_End_Points_Quote_Score__c / Opportunity.Account.Tanium_Derived_EP_WF__c &lt; 0.25,1,IF( ELV_No_of_End_Points_Quote_Score__c / Opportunity.Account.Tanium_Derived_EP_WF__c &lt; 0.5,2,IF( ELV_No_of_End_Points_Quote_Score__c / Opportunity.Account.Tanium_Derived_EP_WF__c &lt; 0.75,3,4))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Footprint Score</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>