objects/Quote/fields/ELV_Free_Products_Term__c.field-meta.xml
<CustomField>
    <fullName>ELV_Free_Products_Term__c</fullName>
    <inlineHelpText>&quot;Free Product Period&quot; is the term the &quot;Trial Product&quot; is offered and is stated as the number of months from the order expiration date that the &quot;Free Products&quot; will deploy.</inlineHelpText>
    <label>Free Products Term</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>