objects/Quote/fields/ELV_Future_Discount_on_Free_Products__c.field-meta.xml
<CustomField>
    <fullName>ELV_Future_Discount_on_Free_Products__c</fullName>
    <inlineHelpText>To guarantee pricing on modules not yet purchased. You MUST Modify Quote Terms to insert Product names. Customer may purchase the following Tanium Products at a __% discount off MSRP.</inlineHelpText>
    <label>DEPRECATED - Future Module Price Disc %</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>