objects/Quote/fields/ELV_Future_Fixed_Pricing__c.field-meta.xml
<CustomField>
    <fullName>ELV_Future_Fixed_Pricing__c</fullName>
    <label>Additional Qty Pricing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Fixed $ Per Unit Price</fullName>
            </value>
            <value>
                <fullName>Fixed % Off List Price</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>