objects/Quote/fields/ELV_Geo__c.field-meta.xml
<CustomField>
    <fullName>ELV_Geo__c</fullName>
    <formula>TEXT(Opportunity.Account.Geo__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Geo</label>
    <type>Text</type>
</CustomField>