objects/Quote/fields/ELV_GovCloud_FedRamp_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>ELV_GovCloud_FedRamp_Product_Count__c</fullName>
    <label>GovCloud FedRamp Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>