objects/Quote/fields/ELV_HardwareSupport__c.field-meta.xml
<CustomField>
    <fullName>ELV_HardwareSupport__c</fullName>
    <label>Hardware Support</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>