objects/Quote/fields/ELV_HeaderFieldSetName__c.field-meta.xml
<CustomField>
    <fullName>ELV_HeaderFieldSetName__c</fullName>
    <label>HeaderFieldSetName</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>SBQQ__LineEditor</fullName>
            </value>
            <value>
                <fullName>Renewal_Line_Editor</fullName>
            </value>
            <value>
                <fullName>New_Line_Editor</fullName>
            </value>
            <value>
                <fullName>Expansion_Line_Editor</fullName>
            </value>
            <value>
                <fullName>MSP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>