objects/Quote/fields/ELV_Hosting_Costs__c.field-meta.xml
<CustomField>
    <fullName>ELV_Hosting_Costs__c</fullName>
    <label>Hosting Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>