objects/Quote/fields/ELV_HuntIQ_Costs__c.field-meta.xml
<CustomField>
    <fullName>ELV_HuntIQ_Costs__c</fullName>
    <label>HuntIQ Costs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>