objects/Quote/fields/ELV_HuntIQ_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>ELV_HuntIQ_Product_Count__c</fullName>
    <label>HuntIQ Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>