objects/Quote/fields/ELV_IARR_Threshold__c.field-meta.xml
<CustomField>
    <fullName>ELV_IARR_Threshold__c</fullName>
    <formula>Opportunity.Incoming_ARR__c * 0.2</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IARR Threshold</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>