objects/Quote/fields/ELV_Ignore_Partner_Addres__c.field-meta.xml
<CustomField>
    <fullName>ELV_Ignore_Partner_Addres__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Different Bill To/Ship To Info</label>
    <type>Checkbox</type>
</CustomField>