objects/Quote/fields/ELV_Ignore_Partner_Margin__c.field-meta.xml
<CustomField>
    <fullName>ELV_Ignore_Partner_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Override Partner Program Discount</label>
    <type>Checkbox</type>
</CustomField>