objects/Quote/fields/ELV_In_Partner_Territory_Program__c.field-meta.xml
<CustomField>
    <fullName>ELV_In_Partner_Territory_Program__c</fullName>
    <formula>IF(AND(ELV_Business_Motion_Oppty__c = &apos;MSP&apos;, NOT(ISBLANK(ELV_End_User_Account__c))), ELV_End_User_Account__r.In_Partner_Territory_Program__c, Opportunity.Account.In_Partner_Territory_Program__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Partner Territory Program</label>
    <type>Checkbox</type>
</CustomField>