objects/Quote/fields/ELV_In_Year_ARR_Adjustment__c.field-meta.xml
<CustomField>
    <fullName>ELV_In_Year_ARR_Adjustment__c</fullName>
    <formula>Opportunity.In_Year_ARR_Adjustment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>In Year Sales ARR Adjustment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>