objects/Quote/fields/ELV_Includes_Trial_Product_Count__c.field-meta.xml
<CustomField>
    <fullName>ELV_Includes_Trial_Product_Count__c</fullName>
    <label>Includes Trial Product Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>