objects/Quote/fields/ELV_Incoming_ARR_formula__c.field-meta.xml
<CustomField>
    <fullName>ELV_Incoming_ARR_formula__c</fullName>
    <formula>Opportunity.Incoming_ARR__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Incoming ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>