objects/Quote/fields/ELV_Incoming_ARR_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Incoming_ARR_Override__c</fullName>
    <label>DEPRECATED - Incoming ARR Override</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>