objects/Quote/fields/ELV_Indirect_Partner_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Indirect_Partner_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Indirect Partner Override</label>
    <type>Checkbox</type>
</CustomField>