objects/Quote/fields/ELV_IR_Use_Only__c.field-meta.xml
<CustomField>
    <fullName>ELV_IR_Use_Only__c</fullName>
    <label>IR Use Only</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>