objects/Quote/fields/ELV_IRProductDescription__c.field-meta.xml
<CustomField>
    <fullName>ELV_IRProductDescription__c</fullName>
    <label>IR Product Description</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>