objects/Quote/fields/ELV_Is_First_Partner_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Is_First_Partner_Renewal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>TNCI-135 / ELV-CPQ-068. Populated by ELV_ renewal uplift automation after evaluating partner route and qualifying renewal history.</description>
    <label>Is First Partner Renewal</label>
    <type>Checkbox</type>
</CustomField>