objects/Quote/fields/ELV_Is_Renewal__c.field-meta.xml
<CustomField>
    <fullName>ELV_Is_Renewal__c</fullName>
    <formula>CONTAINS(TEXT(Opportunity.Type),&quot;Renewal&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Renewal</label>
    <type>Checkbox</type>
</CustomField>