objects/Quote/fields/ELV_isReverseBilling__c.field-meta.xml
<CustomField>
    <fullName>ELV_isReverseBilling__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isReverseBilling</label>
    <type>Checkbox</type>
</CustomField>