objects/Quote/fields/ELV_L1_L2_Support_Exception_Granted__c.field-meta.xml
<CustomField>
    <fullName>ELV_L1_L2_Support_Exception_Granted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1/L2 Support Exception Granted</label>
    <type>Checkbox</type>
</CustomField>