objects/Quote/fields/ELV_L1_L2_Support_Partner__c.field-meta.xml
<CustomField>
    <fullName>ELV_L1_L2_Support_Partner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>L1/L2 Support Provider</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Quotes (L1/L2 Support Provider)</relationshipLabel>
    <relationshipName>ELV_L1_L2_Support_Partner_Q</relationshipName>
    <type>Lookup</type>
</CustomField>