objects/Quote/fields/ELV_L1_L2_Support_Partner_Accredited__c.field-meta.xml
<CustomField>
    <fullName>ELV_L1_L2_Support_Partner_Accredited__c</fullName>
    <defaultValue>false</defaultValue>
    <label>L1 L2 Support Partner Accredited</label>
    <type>Checkbox</type>
</CustomField>