objects/Quote/fields/ELV_LastCalculatedOn__c.field-meta.xml
<CustomField>
    <fullName>ELV_LastCalculatedOn__c</fullName>
    <label>Last Calculated On</label>
    <type>DateTime</type>
</CustomField>