objects/Quote/fields/ELV_LastSavedOn__c.field-meta.xml
<CustomField>
    <fullName>ELV_LastSavedOn__c</fullName>
    <label>Last Saved On</label>
    <type>DateTime</type>
</CustomField>