objects/Quote/fields/ELV_Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Legal Entity</label>
    <referenceTo>Legal_Entity__c</referenceTo>
    <relationshipLabel>Quotes (Legal Entity)</relationshipLabel>
    <relationshipName>ELV_Legal_Entity_Q</relationshipName>
    <type>Lookup</type>
</CustomField>