objects/Quote/fields/ELV_Legal_Entity_City__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_City__c</fullName>
    <formula>ELV_Legal_Entity__r.City__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity City</label>
    <type>Text</type>
</CustomField>