objects/Quote/fields/ELV_Legal_Entity_Country__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_Country__c</fullName>
    <formula>ELV_Legal_Entity__r.Country__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Country</label>
    <type>Text</type>
</CustomField>