objects/Quote/fields/ELV_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_Name__c</fullName>
    <formula>ELV_Legal_Entity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Name</label>
    <type>Text</type>
</CustomField>