objects/Quote/fields/ELV_Legal_Entity_Override__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_Override__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Legal Entity Override</label>
    <type>Checkbox</type>
</CustomField>