objects/Quote/fields/ELV_Legal_Entity_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_Postal_Code__c</fullName>
    <formula>ELV_Legal_Entity__r.Postal_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Postal Code</label>
    <type>Text</type>
</CustomField>