objects/Quote/fields/ELV_Legal_Entity_Street_2__c.field-meta.xml
<CustomField>
    <fullName>ELV_Legal_Entity_Street_2__c</fullName>
    <formula>ELV_Legal_Entity__r.Street_2__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Legal Entity Street 2</label>
    <type>Text</type>
</CustomField>