objects/Quote/fields/ELV_License_Schedule__c.field-meta.xml
<CustomField>
    <fullName>ELV_License_Schedule__c</fullName>
    <defaultValue>false</defaultValue>
    <label>License Schedule</label>
    <type>Checkbox</type>
</CustomField>