objects/Quote/fields/ELV_License_Schedule_Invoicing__c.field-meta.xml
<CustomField>
    <fullName>ELV_License_Schedule_Invoicing__c</fullName>
    <label>Billing and Invoicing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>