objects/Quote/fields/ELV_List_total_without_Promo__c.field-meta.xml
<CustomField>
    <fullName>ELV_List_total_without_Promo__c</fullName>
    <label>List total without Promo</label>
    <precision>17</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>