objects/Quote/fields/ELV_Managed_OS__c.field-meta.xml
<CustomField>
    <fullName>ELV_Managed_OS__c</fullName>
    <label>Managed OS</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>