objects/Quote/fields/ELV_Manually_Set_ESO_Quantity_Term__c.field-meta.xml
<CustomField>
    <fullName>ELV_Manually_Set_ESO_Quantity_Term__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Manually Set ESO Quantity/Term</label>
    <type>Checkbox</type>
</CustomField>