objects/Quote/fields/ELV_Map_SKUs__c.field-meta.xml
<CustomField>
    <fullName>ELV_Map_SKUs__c</fullName>
    <label>Map SKUs</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>