objects/Quote/fields/ELV_March_3_Fix_Applied__c.field-meta.xml
<CustomField>
    <fullName>ELV_March_3_Fix_Applied__c</fullName>
    <defaultValue>false</defaultValue>
    <label>March 3 Fix Applied</label>
    <type>Checkbox</type>
</CustomField>