objects/Quote/fields/ELV_Marketplace_ARR_Impact_Dollars__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_ARR_Impact_Dollars__c</fullName>
    <label>Marketplace Sales ARR Impact (Dollars)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>