objects/Quote/fields/ELV_Marketplace_ARR_Impact_Percent__c.field-meta.xml
<CustomField>
    <fullName>ELV_Marketplace_ARR_Impact_Percent__c</fullName>
    <label>Marketplace Sales ARR Impact (Percent)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>